feat: add delete survey topic api
